--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "fer-cookbook",
-  "version": "0.1.0",
+  "name": "mega-app",
+  "version": "1.0",
   "private": true,
+  "engines": {
+    "node": "14.15.4"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
