--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mega-app",
   "version": "1.0",
   "private": true,
-  
+  "engines": {
+    "node": "14.15.4"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
